# VBMO

./: .gitmodules  25_BAY_condorent  25_COL_condorent  25_FLA_condorent  25_NY_condorent  A-pex_0-01.ipynb  A-pex_0-1.ipynb  AAA.cpp  BAY  BAY-25.txt  BAY_CA  BAY_borda  BAYinst  BayBorda  COL  COL-25.txt  COL_CA  COL_borda  COLinst  ColBorda  DAO-instances.txt  DOT  DOT.cpp  Data_Visualization.ipynb  FLA  FLA_CA  FLA_borda  FLAinst  FlaBorda  NY  NYBorda  NY_CA  NY_borda  NYinst  NYw  README.md  Total.ipynb  USA-road-3.FLA.gr  USA-road-3.NY.gr  VBEA.cpp  (+56 more)
VBEA/: -range-consciousedges-2147483647.json  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  VBEA.cpp  VBEA_old.cpp  cmake_install.cmake  evol
VBEA/Uncapped_data/: Uncapped_Visualization.ipynb  uncap_borda_total_combined.json  uncapped_BAY_25_bordacombined.json  uncapped_BAY_25_combined_approvalcombined.json  uncapped_COL_25_bordacombined.json  uncapped_COL_25_combined_approvalcombined.json  uncapped_COL_25_condorentcombined.json  uncapped_FLA_25_combined_approvalcombined.json  uncapped_FLA_25_condorentcombined.json  uncapped_NY_25_combined_approvalcombined.json  uncapped_NY_25_condorentcombined.json
VBEA/dao-map/: arena2.map  brc000d.map
VBEA/inc/: CMakeCache.txt  CMakeLists.txt  IOutili.cpp  IOutili.hpp  Makefile  graph.cpp  graph.hpp  utili.cpp  utili.hpp  v.cpp  v.hpp
VBEA/visualization/: BAY-borda-combined-20.json  BAY-combined_approval-combined-20.json  BAY-condorcet-combined-20.json  BAY-condorcet-conscious-uncap.json  BAY-range-combined-20.json  COL-range-combined-20.json  FLA-range-combined-15.json  (+5 more)
(+282 files in other folders)
